# switchboardd

./: Cargo.toml  shell.nix
.github/workflows/: check_and_lint.yaml
switchboard-cli/: Cargo.toml
switchboard-cli/src/: amount.rs  main.rs
switchboardd/: Cargo.toml
switchboardd/src/: main.rs
