[package]
name = "switchboard-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.29.1"
jsonrpsee = { version = "0.15.1", features = ["client"] }
switchboard = { git = "https://github.com/nchashch/switchboard", rev = "59f94717b5a9ba6d5e67e6d9988d77caf1aae35b" }
clap = { version = "4.0.1", features = ["derive"] }
anyhow = "1.0.65"
confy = "0.5.0"
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
serde_json = "1.0.87"
dirs = "4.0.0"
