[package]
name = "switchboard-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
switchboard = { path = "../../switchboard" }
clap = { version = "4.0.1", features = ["derive"] }
anyhow = "1.0.65"
confy = "0.5.0"
dirs = "4.0.0"
ureq-jsonrpc = { git = "https://github.com/nchashch/ureq-jsonrpc" }
web3 = "0.18.0"
hex = "0.4.3"
futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
bitcoin = { version = "0.29.1", features = ["serde"] }
