[package]
name = "switchboardd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
switchboard = { path = "../../switchboard" }
clap = { version = "4.0.1", features = ["derive"] }
anyhow = "1.0.65"
confy = "0.5.0"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
futures = "0.3.25"
hyper = "0.14.20"
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
bitcoin = { version = "0.29.2", features = ["serde"] }
dirs = "4.0.0"
